Day_1/Pod-Pod-NetworkPolicy/firefox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: firefox-pod
  namespace: abhishek
  labels:
    nwpolicy: deny
spec:
  containers:
  - image: linuxserver/firefox
    name: firefox-container
    ports:
    - containerPort: 3000
