Day_1/Pod-Pod-NetworkPolicy/pod-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: abhishek
  labels:
    nwpolicy: deny
spec:
  containers:
  - image: nginx
    name: nginx-container
    ports:
    - containerPort: 80
