Day_1/Pod-Pod-NetworkPolicy/npolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: abhishek
spec:
  ingress:
  - ports:
    - port: 3000
